@@ -1,3 +1,4 @@
 !.htaccess
 !admin/
+!docs/
 !includes/
