@@ -1,0 +1,50 @@
+Installing ZenMagick admin
+==========================
+
+ZenMagick admin is the standalone version of the admin UI that comes with ZenMagick. it can be installed beside
+any Zen Cart installation.
+
+
+1. Copy/Upload Files
+====================
+
+Upload all included files into your zencart installation folder. If you are
+using a management console like Plesk or similar you can also upload the zip
+and unpack on the server using the management consoles file manager.
+
+
+2. Install
+==========
+
+2.1 Run SQL scripts
+-------------------
+ZenMagick admin requires a couple additional database tables. The following scripts need to be run
+via the Zen Cart SQL Patch tool:
+
+* zmadmin/shared/etc/sql/mysql/admin_prefs_install.sql
+* zmadmin/shared/etc/sql/mysql/admin_roles_install.sql
+
+NOTE: Corresponding un-install scripts are located in the same folder.
+
+2.2 Optional steps for Zen Cart installations with renamed admin folder
+-----------------------------------------------------------------------
+If you have renamed your admin folder (as per Zen Cart recommendation), you will need to manually
+edit the file 'zmadmin/apps/admin/web/index.php'
+
+Find this line: 
+
+  define('ZC_ADMIN_NAME', 'admin');
+
+and change admin to whatever the name of your admin folder.
+
+
+3. Using ZenMagick admin
+========================
+
+Open a browser and browse to http://[YOUR_DOMAIN]/zmadmin/apps/admin/web/
+
+If all is well you should see the ZenMagick admin login page. Login details are shared with Zen Cart,
+so just login using your normal admin credentials.
+
+NOTE: If your Zen Cart installation is not in the document root but in a subfolder the URL will look like this:
+http://[YOUR_DOMAIN]/[ZENCART_FOLDER]/zmadmin/apps/admin/web/
