@@ -1,0 +1,67 @@
+Installing ZenMagick
+====================
+
+1. Copy/Upload Files
+====================
+
+Upload all included files into your document root on the server. If you are
+using a management console like Plesk or similar you can also upload the zip
+and unpack on the server using the management consoles file manager.
+
+
+2. Create a database
+====================
+
+Prior to running the installation wizard you need to create a database to be used
+by ZenMagick.
+
+
+3. Install
+==========
+
+Open a browser and browse your site. You should see a welcome page with directions as to how
+to actually install and set up ZenMagick.
+
+
+4. Troubleshooting
+==================
+There are a few reasons why the patches might not work as expected. If that 
+is the case you may not see the ZenMagick menu, but only a menu item ZenMagick 
+Installation under the Tools menu. Selecting that, you will see ZenMagick's installation 
+options and error messages detailing why the patches did not work.
+
+Please check the wiki [http://wiki.zenmagick.org/] section about troubleshooting.
+You may also consult the forum [http://forum.zenmagick.org/] for similar topics or ask for help.
+
+Required zen-cart configuration settings 
+----------------------------------------
+* When using ZenMagick themes, the missing page check must be disabled using zen-cart
+  admin (Configuration -> My Store: 'Missing Page Check'). 
+
+Additional configuration
+------------------------
+This release includes a sample ZenMagick config file named local.php.in. If required,
+rename to local.php and uncomment the settings you need.
+To learn more about available settings, check zenmagick/core/settings/defaults.php.
+A lot of the settings can be configured via the admin interface, some are ZenMagick
+specific and require to use local.php.
+Also, keep in mind that you can also create a local.php file in your theme's extra folder
+if you are using multiple themes and need theme specific configuration.
+
+
+5. Further information
+======================
+
+For more information and help please check http://www.zenmagic.org/. The wiki and forum are typically
+the best places to start.
+
+Also, if you think you found a bug, please do report it.
+
+Thanks.
+
+
+Useful links
+============
+Home: http://www.zenmagick.org/
+Wiki: http://wiki.zenmagick.org/
+Forum: http://forum.zenmagick.org/
