@@ -1,0 +1,5 @@
+Welcome to ZenMagick admin ${zenmagick.version}
+
+For more details about ZenMagick please check: http://www.zenmagick.org/
+
+The most recent version can be downloaded at: http://sourceforge.net/project/showfiles.php?group_id=194891
