@@ -1,0 +1,25 @@
+Welcome to ZenMagick ${zenmagick.version}
+
+
+First off, a few useful URLs that should help making your life easier:
+* Installation: http://wiki.zenmagick.org/index.php/Installation
+* Forum: http://forum.zenmagick.org/
+* Wiki: http://forum.zenmagick.org/
+
+
+ZenMagick is based on Zen Cart(tm). For this reason, the installation of ZenMagick is based on the traditional
+Zen Cart installation process.
+
+
+On first browsing your uploaded store you should be faced with the offer to install. Following the installation
+screens should get your store installed in a few moments.
+
+
+Once that installation process is finished your store is almost ready to go. Typical next steps would be:
+* Customize the look & feel.
+* Create categories.
+* Add products.
+* Configure zones, tax, shipping and payment options
+
+
+The most recent version can be downloaded at: http://sourceforge.net/project/showfiles.php?group_id=194891
