@@ -1,23 +1,0 @@
-===============================================
- ZenMagick ${zenmagick.version} - Zen Cart evolved!
-===============================================
-
-Welcome to ZenMagick! 
-
-First off, a few useful URLs that should help make your life easier:
-* Installation: http://wiki.zenmagick.org/index.php/Installation
-* Forum: http://forum.zenmagick.org/
-* Wiki: http://forum.zenmagick.org/
-
-
-ZenMagick is based on Zen Cart(tm). For this reason, the installation of ZenMagick (full-release) is based on the traditional
-Zen Cart installation process.
-
-On first browsing your uploaded store you should be faced with the offer to install. Following the installation screens should
-get your store installed in a few moments.
-
-Once that installation process is finished your store is almost ready to go. Typical next steps would be:
-* Customize the look & feel.
-* Create categories.
-* Add products.
-* Configure zones, tax, shipping and payment options
